Remove Java operator code/module. Placeholder Docker image.