@@ -1,6 +1,3 @@
 #!/bin/bash
 
-exec -a "cassandra-operator" java \
-    -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap \
-    -jar /opt/lib/cassandra-operator/cassandra-operator.jar \
-    "$@"
+echo "hello world"
